--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>SapOnSite</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/logo/dea926_fc1e0f87b7314fc9be94826a3460252e (2).gif"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
